--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -57,7 +57,7 @@
     color: white;
     display: flex;
     gap: 10px;
-    font-size: 20px;
+    font-size: 18px;
 }
 .icon a{
     color: white;
@@ -72,118 +72,13 @@
     gap: 10px;
     font-size: 30px;
 }
+.navbarScroll .icon{
+    color: black;
+}
 .bar{
     display: none;
 }
-.header{    
-    position: absolute;
-    top: 410px;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    gap: 3px;
 
-}
-.header h1{
-    font-size: 70px;
-    color: white;
-}
-.header h2{
-    font-size: 25px;
-    font-weight: 500;
-    color: white;
-}
-.btn{
-    display: flex;
-    gap: 10px;
-    position: relative;
-}
-button{
-    width: 150px;
-    height: 40px;
-    background-color: transparent;
-    border: none;
-    border: 1px solid white;
-    cursor: pointer;
-}
-
-.btn1::before{
-    content: " ";
-    background-color: rgb(210, 137, 0);
-    position: absolute;
-    width: 150px;
-    height: 0%;
-    left: 0;
-    bottom:0;
-    transition: 0.3s;
-}
-.btn1:hover::before{
-    height: 100%;
-    z-index: -1;
-    border: 1px solid orange;
-}
-.btn2::before{
-    content: " ";
-    background-color: rgb(210, 137, 0);
-    position: absolute;
-    width: 150px;
-    height: 0%;
-    right: 0;
-    bottom:0;
-    transition: 0.3s;
-}
-.btn2:hover::before{
-    height: 100%;
-    z-index: -1;
-    border: 1px solid orange;
-}
-button p{
-    color: white;
-    font-weight: 500;
-    font-size: 14px;
-    letter-spacing: 2px;
-}
-.down{
-    position: absolute;
-    bottom: 0;
-    width: 100px;
-    height: 30px;
-    animation-name: down;
-    animation-duration: 4s;
-    animation-delay: 1s;
-    animation-iteration-count: infinite;
-}
-.down a{
-    font-size: 80px;
-    font-weight: 900;
-    block-size: 100px;
-    color: white;
-}
-.cd-words-wrapper .is-visible{
-    opacity: 1;
-    -webkit-transform: rotateX(0deg);
-    -moz-transform: rotateX(0deg);
-    -ms-transform: rotateX(0deg);
-    -o-transform: rotateX(0deg);
-    transform: rotateX(0deg);
-    -webkit-animation: cd-rotate-1-in 1.2s;
-    -moz-animation: cd-rotate-1-in 1.2s;
-    animation: cd-rotate-1-in 1.2s;
-}
-@keyframes down {
-    0%{
-        height: 5%;
-    }
-    50%{
-        height: 10%;
-    }
-    100%{
-        height: 0%;
-    }
-}
 
 @media screen and (max-width:916px) {
     .logo img{
