--- a/src/styles/gif.module.css
+++ b/src/styles/gif.module.css
@@ -109,3 +109,9 @@
     height: 10px;
     border-radius: 50px;
 }
+
+@media screen and (max-width:1024px) {
+    .gifes{
+        flex-direction: column;
+    }
+}
