--- a/src/styles/images.module.css
+++ b/src/styles/images.module.css
@@ -3,15 +3,27 @@
     width: 100%;
     display: flex;
 }
-.flat, .views , .higher , .bay , .villa , .garden , .golden{
-    background-position: center;
+
+.flat img, .views , .higher , .bay , .villa , .garden , .golden{
+    background-position: center;    
     background-repeat: no-repeat;
     background-size: cover; 
+    transition: 0.3s;
+    /* position: relative; */
+}
+/* .flat img:hover{
+    transform: scale(1.3);
+    z-index: 2;
+} */
+.flat img{
+    position: relative;
 }
 .flat{
+    position: relative;
     width: 50%;
-    height: 600px;
-    background-image: url(https://www.pirenko-themes.com/hook/architecture/wp-content/uploads/sites/19/2016/06/big-blue-1280x1280.jpg);   
+    height: 600px;    
+    overflow: hidden;
+    /* background-image: url(https://www.pirenko-themes.com/hook/architecture/wp-content/uploads/sites/19/2016/06/big-blue-1280x1280.jpg);    */
 }
 .views{
     width: 25%;
@@ -55,4 +67,33 @@
     height: 300px;
     background-image: url(https://www.pirenko-themes.com/hook/architecture/wp-content/uploads/sites/19/2016/06/san-fran-640x640.jpg);
 }
-
+.text{
+    display: block;
+}
+.text p{
+    font-size: 12px;
+}
+.garden:hover .text,
+.golden:hover .text,
+.flat:hover .text ,
+.views:hover .text,
+.higher:hover .text,
+.bay:hover .text,
+.villa:hover .text{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    color: white;
+    background-color: rgba(22, 21, 21,0.7);
+    z-index: 3;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.flat:hover img{
+    transform: scale(1.3);
+    z-index: 2;
+}
