--- a/src/styles/images.module.css
+++ b/src/styles/images.module.css
@@ -4,7 +4,7 @@
     display: flex;
 }
 
-.flat img, .views , .higher , .bay , .villa , .garden , .golden{
+.flat img, .views img   , .higher , .bay , .villa , .garden , .golden{
     background-position: center;    
     background-repeat: no-repeat;
     background-size: cover; 
@@ -15,20 +15,17 @@
     transform: scale(1.3);
     z-index: 2;
 } */
-.flat img{
-    position: relative;
-}
+
 .flat{
     position: relative;
     width: 50%;
     height: 600px;    
     overflow: hidden;
-    /* background-image: url(https://www.pirenko-themes.com/hook/architecture/wp-content/uploads/sites/19/2016/06/big-blue-1280x1280.jpg);    */
 }
 .views{
     width: 25%;
     height: 300px;
-    background-image: url(https://www.pirenko-themes.com/hook/architecture/wp-content/uploads/sites/19/2016/05/tonal-640x640.jpg);
+    /* background-image: url(https://www.pirenko-themes.com/hook/architecture/wp-content/uploads/sites/19/2016/05/tonal-640x640.jpg); */
 }
 .higher{
     width: 25%;
@@ -68,7 +65,7 @@
     background-image: url(https://www.pirenko-themes.com/hook/architecture/wp-content/uploads/sites/19/2016/06/san-fran-640x640.jpg);
 }
 .text{
-    display: block;
+    display: none;
 }
 .text p{
     font-size: 12px;
@@ -94,6 +91,10 @@
     left: 0;
 }
 .flat:hover img{
+    transform: scale(1.3);
+    z-index: 2;
+}
+.views:hover img{
     transform: scale(1.3);
     z-index: 2;
 }
