--- a/src/styles/images.module.css
+++ b/src/styles/images.module.css
@@ -23,14 +23,15 @@
     overflow: hidden;
 }
 .views{
+    position: relative;
     width: 25%;
     height: 300px;
-    /* background-image: url(https://www.pirenko-themes.com/hook/architecture/wp-content/uploads/sites/19/2016/05/tonal-640x640.jpg); */
 }
 .higher{
+    position: relative;
     width: 25%;
     height: 300px;
-    background-image: url(https://www.pirenko-themes.com/hook/architecture/wp-content/uploads/sites/19/2016/06/penthouse-640x640.jpg);
+    /* background-image: url(https://wwwss.pirenko-themes.com/hook/architecture/wp-content/uploads/sites/19/2016/06/penthouse-640x640.jpg); */
 }
 .bay{
     position: absolute;
@@ -96,5 +97,5 @@
 }
 .views:hover img{
     transform: scale(1.3);
-    z-index: 2;
+    z-index: -1;
 }
